creating a put request voor updating event but it doesnt work yet
